Initial commit: Mirror Open-WebUI

--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -1351,7 +1351,7 @@
 	"Show your support!": "表达你的支持！",
 	"Showcased creativity": "很有创意",
 	"Sign in": "登录",
-	"Sign in to {{WEBUI_NAME}}": "登录 {{WEBUI_NAME}}",
+	"Sign in to {{WEBUI_NAME}}": "登录 鞍云智鼎-个人版",
 	"Sign in to {{WEBUI_NAME}} with LDAP": "使用 LDAP 登录 {{WEBUI_NAME}}",
 	"Sign Out": "登出",
 	"Sign up": "注册",
